fix: horizontal scrollbar on desktop view

--- a/docs/docs.css
+++ b/docs/docs.css
@@ -8,7 +8,6 @@
 .component-box-border {
     border: 0.125rem solid #dee2e6;
     border-radius: 0.25rem;
-    width: 100%;
 }
 
 .divider {
